...
                    Padding(
                      padding: const EdgeInsets.all(24),
                      child: Column(
                        crossAxisAlignment: CrossAxisAlignment.start,
                        children: [
                          Text(
                            _showLogin ? 'Anmelden' : 'Kolpingtheater\nRamsen',
                            style: TextStyle(
                              fontSize: _showLogin ? 24 : 38,
                              height: 1.08,
                              fontWeight: FontWeight.w800,
                              color: Colors.white,
                              letterSpacing: -1.3,
...
